--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,8 @@ jobs:
       # CircleCI maintains a library of pre-built images
       # documented at https://circleci.com/docs/2.0/circleci-images/
       # - image: circleci/mysql:9.4
-
+    environment:
+      - APP_KEY: "base64:jigaIaW1vv9WAh15WdQELPkrD85d1p4L5SK2mUmuLfQ="
     working_directory: ~/repo
 
     steps:
