Laravel DuskがCircleCIで動くよう修正

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,7 +24,6 @@ jobs:
           - v1-dependencies-
 
       - run: composer install -n --prefer-dist
-
       - save_cache:
           paths:
             - ./vendor
@@ -32,3 +31,16 @@ jobs:
         
       # run tests!
       - run: vendor/bin/phpunit
+      - run:
+          name: Start Chrome Driver
+          command: ./vendor/laravel/dusk/bin/chromedriver-linux
+          background: true
+
+      - run:
+          name: Run Laravel Server
+          command: php artisan serve
+          background: true
+
+      - run:
+          name: Run Laravel Dusk Tests
+          command: php artisan dusk
