--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,11 +25,10 @@ jobs:
           # fallback to using the latest cache if no exact match is found
           - v1-dependencies-
 
-      - run: composer install -n --prefer-dist
       - run:
           name: Setup Laravel
-          command: |
-            cp .env.circleci .env
+          command: cp .env.circleci .env
+      - run: composer install -n --prefer-dist
       - save_cache:
           paths:
             - ./vendor
