--- a/.env.circleci
+++ b/.env.circleci
@@ -2,7 +2,7 @@ APP_NAME=dietdb
 APP_ENV=testing
 APP_KEY=base64:jigaIaW1vv9WAh15WdQELPkrD85d1p4L5SK2mUmuLfQ=
 APP_DEBUG=true
-APP_URL=http://localhost #最後のスラッシュは含めない事。
+APP_URL=http://localhost:8000 #最後のスラッシュは含めない事。
 
 LOG_CHANNEL=stack
 
