Laravel DuskがCircleCIで動くよう修正11

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,7 @@ jobs:
 #      - APP_ENV: testing
 #      - APP_KEY: base64:jigaIaW1vv9WAh15WdQELPkrD85d1p4L5SK2mUmuLfQ=
 #      - APP_URL: http://localhost
-#    working_directory: ~/repo
+    working_directory: ~/repo
 
     steps:
       - checkout
