--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,6 +5,10 @@ jobs:
       # specify the version you desire here
       - image: circleci/php:7.1-browsers
       
+      - image: circleci/postgres:11.1
+        environment:
+          POSTGRES_USER: root
+          POSTGRES_DB: laravel57
       # Specify service dependencies here if necessary
       # CircleCI maintains a library of pre-built images
       # documented at https://circleci.com/docs/2.0/circleci-images/
