Laravel DuskがCircleCIで動くよう修正17

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,6 +29,7 @@ jobs:
           # fallback to using the latest cache if no exact match is found
           - v1-dependencies-
 
+      - run: sudo apt install -y postgresql-client || true
       - run:
           name: Setup Laravel
           command: cp .env.circleci .env
