--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,11 +4,7 @@ jobs:
     docker:
       # specify the version you desire here
       - image: circleci/php:7.1-browsers
-      
       - image: circleci/postgres:11.1
-        environment:
-          POSTGRES_USER: root
-          POSTGRES_DB: laravel57
       # Specify service dependencies here if necessary
       # CircleCI maintains a library of pre-built images
       # documented at https://circleci.com/docs/2.0/circleci-images/
@@ -21,15 +17,25 @@ jobs:
 
     steps:
       - checkout
-
+      - run:
+          name: Install PostgreSQL client tools
+          command: |
+            sudo apt-get update && sudo apt-get install postgresql-client
+      - run:
+          name: Install and enable pdo_pgsql php extension
+          command: |
+            sudo apt-get update && sudo apt-get install libpq-dev
+            sudo docker-php-ext-install pdo_pgsql && sudo docker-php-ext-enable pdo_pgsql
       # Download and cache dependencies
       - restore_cache:
           keys:
           - v1-dependencies-{{ checksum "composer.json" }}
           # fallback to using the latest cache if no exact match is found
           - v1-dependencies-
-
-      - run: sudo apt install -y postgresql-client || true
+      - run:
+          name: Prep the database and user, install extensions etc.
+          command: |
+            sudo -u postgres psql -h 127.0.0.1 -U postgres -c "create database laravel57"
       - run:
           name: Setup Laravel
           command: cp .env.circleci .env
