--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,10 +21,7 @@ jobs:
           name: Install PostgreSQL client tools
           command: |
             sudo apt-get update && sudo apt-get install postgresql-client
-      - run:
-          name: Install and enable pdo_pgsql php extension
-          command: |
-            sudo apt-get update && sudo apt-get install libpq-dev
+      - run: apt-get update && apt-get -y install git unzip zlib1g-dev libpq-dev
       # Download and cache dependencies
       - restore_cache:
           keys:
