--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,9 @@ jobs:
     docker:
       # specify the version you desire here
       - image: circleci/php:7.1-browsers
-      - image: circleci/postgres:11.1
+      - image: circleci/postgres:9.6
+        environment:
+          POSTGRES_USER: postgres
       # Specify service dependencies here if necessary
       # CircleCI maintains a library of pre-built images
       # documented at https://circleci.com/docs/2.0/circleci-images/
@@ -17,7 +19,6 @@ jobs:
 
     steps:
       - checkout
-      - run: sudo apt install -y postgresql-client || true
       # Download and cache dependencies
       - restore_cache:
           keys:
