--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,9 +4,7 @@ jobs:
     docker:
       # specify the version you desire here
       - image: circleci/php:7.1-browsers
-      - image: circleci/postgres:9.6
-        environment:
-          POSTGRES_USER: postgres
+      - image: circleci/postgres:11.1
       # Specify service dependencies here if necessary
       # CircleCI maintains a library of pre-built images
       # documented at https://circleci.com/docs/2.0/circleci-images/
@@ -19,6 +17,7 @@ jobs:
 
     steps:
       - checkout
+      - run: sudo apt install -y postgresql-client || true
       # Download and cache dependencies
       - restore_cache:
           keys:
