--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,7 +17,7 @@ jobs:
 
     steps:
       - checkout
-      - run: sudo apt-get install php-pgsql
+      - run: sudo apt-get install php7.0-pgsql
       # Download and cache dependencies
       - restore_cache:
           keys:
