--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,8 +3,8 @@ jobs:
   build:
     docker:
       # specify the version you desire here
-      - image: circleci/php:7.0-pgsql
-      #- image: circleci/postgres:11.1
+      - image: circleci/php:7.1-browsers
+      - image: circleci/postgres:11.1
       # Specify service dependencies here if necessary
       # CircleCI maintains a library of pre-built images
       # documented at https://circleci.com/docs/2.0/circleci-images/
@@ -17,7 +17,7 @@ jobs:
 
     steps:
       - checkout
-      - run: sudo apt-get install php7.0-pgsql
+      - run: sudo apt install postgresql-client
       # Download and cache dependencies
       - restore_cache:
           keys:
