--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,7 +17,7 @@ jobs:
 
     steps:
       - checkout
-      - run: sudo apt install postgresql-client
+      - run: sudo apt update && sudo apt install postgresql-client
       # Download and cache dependencies
       - restore_cache:
           keys:
