--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,53 +1,36 @@
 version: 2
 jobs:
   build:
+    working_directory: ~/circleci-demo-ruby-rails
+    
+    # Primary container image where all commands run
+    
     docker:
-      # specify the version you desire here
       - image: circleci/php:7.1-browsers
-      - image: circleci/postgres:11.1
-      # Specify service dependencies here if necessary
-      # CircleCI maintains a library of pre-built images
-      # documented at https://circleci.com/docs/2.0/circleci-images/
-      # - image: circleci/mysql:9.4
-#    environment:
-#      - APP_ENV: testing
-#      - APP_KEY: base64:jigaIaW1vv9WAh15WdQELPkrD85d1p4L5SK2mUmuLfQ=
-#      - APP_URL: http://localhost
-    working_directory: ~/repo
-
+        environment:
+          RAILS_ENV: test
+          PGHOST: 127.0.0.1
+          PGUSER: root
+    
+    # Service container image available at `host: localhost`
+    
+      - image: circleci/postgres:9.6.2-alpine
+        environment:
+          POSTGRES_USER: root
+          POSTGRES_DB: circle-test_test
+        
     steps:
       - checkout
-      - run: sudo apt update && sudo apt install postgresql-client
-      # Download and cache dependencies
+
+      # Restore bundle cache
       - restore_cache:
           keys:
-          - v1-dependencies-{{ checksum "composer.json" }}
-          # fallback to using the latest cache if no exact match is found
-          - v1-dependencies-
-      - run:
-          name: Setup Laravel
-          command: cp .env.circleci .env
-      - run: composer install -n --prefer-dist
-      - save_cache:
-          paths:
-            - ./vendor
-          key: v1-dependencies-{{ checksum "composer.json" }}
-        
-      # migration, seeding
-      - run: php artisan migrate --seed
+            - rails-demo-{{ checksum "Gemfile.lock" }}
+            - rails-demo-
 
-      # run tests!
-      - run: vendor/bin/phpunit
+      # Bundle install dependencies
       - run:
-          name: Start Chrome Driver
-          command: ./vendor/laravel/dusk/bin/chromedriver-linux
-          background: true
+          name: Install dependencies
+          command: bundle check --path=vendor/bundle || bundle install --path=vendor/bundle --jobs 4 --retry 3
 
-      - run:
-          name: Run Laravel Server
-          command: php artisan serve
-          background: true
-
-      - run:
-          name: Run Laravel Dusk Tests
-          command: php artisan dusk
+      - run: sudo apt install -y postgresql-client || true
