--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,3 +19,36 @@ jobs:
 
 
       - run: sudo apt install -y postgresql-client || true
+      # Download and cache dependencies
+      - restore_cache:
+          keys:
+          - v1-dependencies-{{ checksum "composer.json" }}
+          # fallback to using the latest cache if no exact match is found
+          - v1-dependencies-
+      - run:
+          name: Setup Laravel
+          command: cp .env.circleci .env
+      - run: composer install -n --prefer-dist
+      - save_cache:
+          paths:
+            - ./vendor
+          key: v1-dependencies-{{ checksum "composer.json" }}
+        
+      # migration, seeding
+      - run: php artisan migrate --seed
+
+      # run tests!
+      - run: vendor/bin/phpunit
+      - run:
+          name: Start Chrome Driver
+          command: ./vendor/laravel/dusk/bin/chromedriver-linux
+          background: true
+
+      - run:
+          name: Run Laravel Server
+          command: php artisan serve
+          background: true
+
+      - run:
+          name: Run Laravel Dusk Tests
+          command: php artisan dusk
