--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,6 +19,10 @@ jobs:
 
 
       - run: sudo apt install -y postgresql-client || true
+      - run: apt-get update && apt-get -y install git unzip zlib1g-dev libpq-dev
+      - checkout
+      - run: docker-php-ext-configure pgsql -with-pgsql=/usr/local/pgsql
+      - run: docker-php-ext-install pdo pdo_pgsql zip
       # Download and cache dependencies
       - restore_cache:
           keys:
