--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,6 +4,7 @@ jobs:
     docker:
       # specify the version you desire here
       - image: circleci/php:7.1-browsers
+      - image: circleci/postgres:11.1
       # Specify service dependencies here if necessary
       # CircleCI maintains a library of pre-built images
       # documented at https://circleci.com/docs/2.0/circleci-images/
@@ -32,7 +33,7 @@ jobs:
           key: v1-dependencies-{{ checksum "composer.json" }}
         
       # migration, seeding
-      - run: php artisan migrate
+      - run: docker-compose run app php artisan migrate --seed
 
       # run tests!
       - run: vendor/bin/phpunit
