Laravel DuskがCircleCIで動くよう修正40

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,7 @@ jobs:
     docker:
       # specify the version you desire here
       - image: circleci/php:7.1-browsers
-      - image: circleci/postgres:11.1
+      #- image: circleci/postgres:11.1
       # Specify service dependencies here if necessary
       # CircleCI maintains a library of pre-built images
       # documented at https://circleci.com/docs/2.0/circleci-images/
@@ -16,10 +16,8 @@ jobs:
     working_directory: ~/repo
     steps:
       - checkout
-      - run: sudo apt install -y postgresql-client || true
+      - run: sudo apt install -y postgresql-9.3 || true
       
-      # migration, seeding
-      - run: php artisan migrate --seed
       # Download and cache dependencies
       - restore_cache:
           keys:
@@ -35,6 +33,9 @@ jobs:
             - ./vendor
           key: v1-dependencies-{{ checksum "composer.json" }}
         
+
+      # migration, seeding
+      - run: php artisan migrate --seed
 
       # run tests!
       - run: vendor/bin/phpunit
