Laravel DuskがCircleCIで動くよう修正43

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,7 @@ jobs:
     docker:
       # specify the version you desire here
       - image: circleci/php:7.1-browsers
-      #- image: circleci/postgres:11.1
+      - image: circleci/postgres:11.1
       # Specify service dependencies here if necessary
       # CircleCI maintains a library of pre-built images
       # documented at https://circleci.com/docs/2.0/circleci-images/
@@ -16,9 +16,7 @@ jobs:
     working_directory: ~/repo
     steps:
       - checkout
-      - run: sudo apt install -y postgresql-9.3 || true
       - run: sudo apt install -y postgresql-client || true
-      
       - checkout
       # Download and cache dependencies
       - restore_cache:
