--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,8 +15,8 @@ jobs:
     working_directory: ~/repo
     steps:
       - checkout
-      #- run: sudo apt install -y postgresql-client || true
-      #- checkout
+      - run: sudo apt install -y postgresql-client || true
+      - checkout
       # Download and cache dependencies
       - restore_cache:
           keys:
