--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,11 +4,11 @@ jobs:
     docker:
       # specify the version you desire here
       - image: circleci/php:7.1-browsers
-      - image: circleci/postgres:11.1
+      #- image: circleci/postgres:11.1
       # Specify service dependencies here if necessary
       # CircleCI maintains a library of pre-built images
       # documented at https://circleci.com/docs/2.0/circleci-images/
-      # - image: circleci/mysql:9.4
+      - image: circleci/mysql:9.4
     environment:
 #      - APP_ENV: testing
 #      - APP_URL: http://localhost
@@ -21,8 +21,8 @@ jobs:
     working_directory: ~/repo
     steps:
       - checkout
-      - run: sudo apt install -y postgresql-client || true
-      - checkout
+      #- run: sudo apt install -y postgresql-client || true
+      #- checkout
       # Download and cache dependencies
       - restore_cache:
           keys:
