--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,8 +7,8 @@ jobs:
       # Specify service dependencies here if necessary
       # CircleCI maintains a library of pre-built images
       # documented at https://circleci.com/docs/2.0/circleci-images/
-      # - image: circleci/mysql:9.4
-      - image: circleci/postgres:11.1
+       - image: circleci/mysql:9.4
+      # - image: circleci/postgres:11.1
 #    environment:
 #      - APP_ENV: testing
 #      - APP_URL: http://localhost
