--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ jobs:
       # Specify service dependencies here if necessary
       # CircleCI maintains a library of pre-built images
       # documented at https://circleci.com/docs/2.0/circleci-images/
-      - image: circleci/mysql:9.4
+      - image: circleci/mysql
       # - image: circleci/postgres:11.1
 #    environment:
 #      - APP_ENV: testing
