--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,6 +18,9 @@ jobs:
       - checkout
       # - run: sudo apt install -y postgresql-client || true
       # - checkout
+      - run:
+          name: Install PHP extensions
+          command: sudo docker-php-ext-install pdo_mysql
       # Download and cache dependencies
       - restore_cache:
           keys:
